# stoolap-ruby

./: .gitignore  .simplecov  Cargo.toml  README.md  Rakefile  benchmark.rb  stoolap.gemspec
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
ext/stoolap/: Cargo.toml  extconf.rb
ext/stoolap/src/: database.rs  error.rs  lib.rs  statement.rs  transaction.rs  value.rs
lib/: stoolap.rb
lib/stoolap/: version.rb
test/: test_basic.rb  test_edge_cases.rb  test_helper.rb  test_named_params.rb  test_persistence.rb  test_prepared.rb  test_transactions.rb  test_types.rb  test_vector.rb
