[package]
name = "stoolap"
version = "0.4.0"
edition = "2021"
authors = ["Stoolap Contributors"]
license = "Apache-2.0"
description = "Native Ruby driver for the Stoolap embedded SQL database"
repository = "https://github.com/stoolap/stoolap-ruby"
homepage = "https://stoolap.io"
publish = false

[lib]
name = "stoolap"
crate-type = ["cdylib"]

[dependencies]
stoolap = "0.4.0"
magnus = "0.8"
chrono = "0.4"

